Добавлены контроллеры для работы с BusinessOperation и BusinessOperationType Добавлено предсталвение для отображения списка бизнес-операций Добавлено отображение списка бизнес-операций в клиентском приложении WPF
