# StablingApi/Models/BusinessOperationView.cs
@@ -1,7 +1,0 @@
-﻿namespace StablingApi.Models
-{
-    public class BusinessOperationView : BusinessOperation
-    {
-        public bool IsIncome { get; set; }
-    }
-}
